--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Szkolenie</title>
 </head>
 <body>
+    <input type="text" id="input1" type="number" />
+    <input type="text" id="input2" type="number" />
+    <button id="button1">Add</button>
     <script src="dist/app.js"></script>
 </body>
 </html>
