--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <input type="text" id="input1" type="number" />
     <input type="text" id="input2" type="number" />
     <button id="button1">Add</button>
-    <script src="dist/app.js"></script>
+    <script type="module" src="dist/app.js"></script>
 </body>
 </html>
